--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -47,4 +47,4 @@ EXPOSE 3001
 
 # Use our custom entrypoint script
 ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["node", "server.js"]
+CMD ["node", "dist/index.js"]
