Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 # Domain and URL Configuration
-DOMAIN_NAME=demo.rybbit.io
-BASE_URL="https://${DOMAIN_NAME}"
+DOMAIN_NAME=rybbit.martin-linde.com
+BASE_URL="https://rybbit.martin-linde.com"
 
 # Authentication and Security
 BETTER_AUTH_SECRET=insecure-secret
-DISABLE_SIGNUP=false
+DISABLE_SIGNUP=true
 
 # Webserver Configuration
 # Set to false to disable the built-in Caddy webserver
-USE_WEBSERVER=true
+USE_WEBSERVER=false
 # Host port mappings - these control how services are exposed
 # Format: "host_binding:container_port" or "port:container_port"
-HOST_BACKEND_PORT=127.0.0.1:3001
-HOST_CLIENT_PORT=127.0.0.1:3002
+HOST_BACKEND_PORT=3001
+HOST_CLIENT_PORT=3002
 
 # ClickHouse Database Configuration
 CLICKHOUSE_DB=analytics
