--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`rybbit.martin-linde.com`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.entrypoints=web-secure"  # Changed from websecure
       - "traefik.http.services.backend.loadbalancer.server.port=3001"
-      - "traefik.http.routers.backend.tls.certresolver=myresolver"
+      - "traefik.http.routers.backend.tls=true"  # Changed from tls.certresolver
     environment:
       - NODE_ENV=production
       - CLICKHOUSE_HOST=http://clickhouse:8123
@@ -99,9 +99,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.rule=Host(`rybbit.martin-linde.com`)"
-      - "traefik.http.routers.client.entrypoints=websecure"
+      - "traefik.http.routers.client.entrypoints=web-secure"  # Changed from websecure
       - "traefik.http.services.client.loadbalancer.server.port=3002"
-      - "traefik.http.routers.client.tls.certresolver=myresolver"
+      - "traefik.http.routers.client.tls=true"  # Changed from tls.certresolver
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_BACKEND_URL=${BASE_URL}
