--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Domain and URL Configuration
 DOMAIN_NAME=rybbit.martin-linde.com
-BASE_URL="https://rybbit.martin-linde.com"
+BASE_URL=https://rybbit.martin-linde.com:8443  # Add port 8443
 
 # Authentication and Security
-BETTER_AUTH_SECRET=insecure-secret
+BETTER_AUTH_SECRET=!!!999RunninMan999!!!
 DISABLE_SIGNUP=true
 
 # Webserver Configuration
