--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DOMAIN_NAME=rybbit.martin-linde.com
 BASE_URL=https://rybbit.martin-linde.com:8443  # Add port 8443
 
 # Authentication and Security
-BETTER_AUTH_SECRET=!!!999RunninMan999!!!
+BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
 DISABLE_SIGNUP=true
 
 # Webserver Configuration
