--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,12 @@ services:
     build:
       context: .
       dockerfile: server/Dockerfile
-    labels:
+    ports:
+      - "3001:3001"
+  labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`rybbit.martin-linde.com`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.services.backend.loadbalancer.server.port=3001"
     environment:
       - NODE_ENV=production
@@ -90,9 +93,12 @@ services:
       args:
         NEXT_PUBLIC_BACKEND_URL: ${BASE_URL}
         NEXT_PUBLIC_DISABLE_SIGNUP: ${DISABLE_SIGNUP}
+    ports:
+      - "3002:3002"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.rule=Host(`rybbit.martin-linde.com`)"
+      - "traefik.http.routers.client.entrypoints=websecure"
       - "traefik.http.services.client.loadbalancer.server.port=3002"
     environment:
       - NODE_ENV=production
