--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`rybbit.martin-linde.com`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.entrypoints=web-secure"
       - "traefik.http.services.backend.loadbalancer.server.port=3001"
     environment:
       - NODE_ENV=production
@@ -98,7 +98,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.rule=Host(`rybbit.martin-linde.com`)"
-      - "traefik.http.routers.client.entrypoints=websecure"
+      - "traefik.http.routers.client.entrypoints=web-secure"
       - "traefik.http.services.client.loadbalancer.server.port=3002"
     environment:
       - NODE_ENV=production
