--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
+# https://www.rybbit.io/docs/self-hosting-advanced
+
+# NOTE: there are two sample HTTP traefik domain entries created:
+# - rybbit_backend (port 3001, path /api), 
+# - rybbit_client (port 3002, path /)
+#
+# You should treat these as placeholders - Rybbit only supports HTTPS.
+#
+# You should also update the `BASE_URL` environment variable when
+# updating the domain entries with your custom domain.
+
 services:
-  clickhouse:
-    container_name: clickhouse
-    image: clickhouse/clickhouse-server:25.4.2
-    ports:
-      - "8123:8123"
-      - "9000:9000"
+  rybbit_clickhouse:
+    image: clickhouse/clickhouse-server:25.5
     volumes:
-      - clickhouse-data:/var/lib/clickhouse
-      - ./clickhouse_config:/etc/clickhouse-server/config.d
+      - clickhouse_data:/var/lib/clickhouse
+      - ../files/clickhouse_config:/etc/clickhouse-server/config.d
     environment:
-      - CLICKHOUSE_DB=${CLICKHOUSE_DB:-analytics}
-      - CLICKHOUSE_USER=${CLICKHOUSE_USER:-default}
-      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-frog}
+      - CLICKHOUSE_DB=${CLICKHOUSE_DB}
+      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
     healthcheck:
       test:
         [
@@ -22,92 +29,66 @@ services:
           "--spider",
           "http://localhost:8123/ping",
         ]
-      interval: 3s
-      timeout: 5s
-      retries: 5
+      interval: 30s
+      timeout: 10s
+      retries: 3
       start_period: 10s
     restart: unless-stopped
 
-  postgres:
-    image: postgres:17.4
-    container_name: postgres
+  rybbit_postgres:
+    image: postgres:17.5
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-frog}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-frog}
-      - POSTGRES_DB=${POSTGRES_DB:-analytics}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
-      interval: 3s
-      timeout: 5s
-      retries: 5
-      start_period: 10s
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: unless-stopped
 
-  backend:
-    image: ghcr.io/rybbit-io/rybbit-backend:${IMAGE_TAG:-latest}
-    container_name: backend
-    build:
-      context: .
-      dockerfile: server/Dockerfile
-    ports:
-      - "3001:3001"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`rybbit.martin-linde.com`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.entrypoints=websecure"
-      - "traefik.http.services.backend.loadbalancer.server.port=3001"
+  rybbit_backend:
+    image: ghcr.io/rybbit-io/rybbit-backend:v1.5.1
     environment:
       - NODE_ENV=production
-      - CLICKHOUSE_HOST=http://clickhouse:8123
-      - CLICKHOUSE_DB=${CLICKHOUSE_DB:-analytics}
-      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-frog}
-      - POSTGRES_HOST=postgres
+      - CLICKHOUSE_HOST=http://rybbit_clickhouse:8123
+      - CLICKHOUSE_DB=${CLICKHOUSE_DB}
+      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
+      - POSTGRES_HOST=rybbit_postgres
       - POSTGRES_PORT=5432
-      - POSTGRES_DB=${POSTGRES_DB:-analytics}
-      - POSTGRES_USER=${POSTGRES_USER:-frog}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-frog}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
       - BASE_URL=${BASE_URL}
       - DISABLE_SIGNUP=${DISABLE_SIGNUP}
     depends_on:
-      clickhouse:
+      rybbit_clickhouse:
         condition: service_healthy
-      postgres:
+      rybbit_postgres:
         condition: service_started
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3001/api/health"]
-      interval: 3s
-      timeout: 5s
-      retries: 5
+      interval: 30s
+      timeout: 10s
+      retries: 3
       start_period: 10s
     restart: unless-stopped
 
-  client:
-    image: ghcr.io/rybbit-io/rybbit-client:${IMAGE_TAG:-latest}
-    container_name: client
-    build:
-      context: .
-      dockerfile: client/Dockerfile
-      args:
-        NEXT_PUBLIC_BACKEND_URL: ${BASE_URL}
-        NEXT_PUBLIC_DISABLE_SIGNUP: ${DISABLE_SIGNUP}
-    ports:
-      - "3002:3002"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.client.rule=Host(`rybbit.martin-linde.com`)"
-      - "traefik.http.routers.client.entrypoints=websecure"
-      - "traefik.http.services.client.loadbalancer.server.port=3002"
+  rybbit_client:
+    image: ghcr.io/rybbit-io/rybbit-client:v1.5.1
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_BACKEND_URL=${BASE_URL}
       - NEXT_PUBLIC_DISABLE_SIGNUP=${DISABLE_SIGNUP}
     depends_on:
-      - backend
+      - rybbit_backend
     restart: unless-stopped
 
 volumes:
-  clickhouse-data:
-  postgres-data:
+  clickhouse_data:
+  postgres_data:
